testsuite/tests/rename/should_fail/rnfail051.stderr

rnfail051.hs:7:17: error: [GHC-66228]
    View pattern in expression context: _ -> putStrLn "_"
